# bump-dependencies

./: .gitignore  README.md  bump_deps.py  pyproject.toml  tox.ini
src/: bump_dependencies.py  bump_deps.py  test_bump_dependencies.py  test_bump_deps.py
tests/: test_bump_dependencies.py
