[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bump-deps"
version = "0.1.0"
description = "Bump Python package dependencies in pyproject.toml"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Corey Goldberg"}]
maintainers = [{name = "Corey Goldberg"}]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["package", "dependencies", "requirements", "bump", "upgrade"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["requests==2.32.4", "rich==14.0.0", "tomlkit==0.13.3", "validate-pyproject==0.24.1"]

[project.optional-dependencies]
dev = ["tox"]
test = ["pytest==8.4.1"]
lint = ["black", "ruff"]

[project.scripts]
bump_deps = "bump_deps:main"

[project.urls]
homepage = "https://github.com/cgoldberg/bump-deps"
source = "https://github.com/cgoldberg/bump-deps"
download = "https://pypi.org/project/bump-deps"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
# "-vv" means extra verbose
# "-r fEsxXp" means show extra test summary info as specified by:
#     (f)ailed, (E)rror, (s)kipped, (x)failed, (X)passed, (p)assed
addopts = "-vv -r fEsxXp"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.ruff]
line-length = 120
respect-gitignore = true
target-version = "py39"

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "E501", "RUF022"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
