[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bump-dependencies"
version = "0.1.5dev0"
description = "Bump Python package dependencies in pyproject.toml"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Corey Goldberg"}]
maintainers = [{name = "Corey Goldberg"}]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["package", "dependencies", "requirements", "bump", "upgrade"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "packaging==16.8",
    "requests==2.18.4",
    "requirements-parser==0.2.0",
    "rich==15.0.0",
    "tomlkit==0.15.0",
    "validate-pyproject==0.9",
]

[project.scripts]
bump_dependencies = "bump_dependencies:main"

[project.urls]
homepage = "https://github.com/cgoldberg/bump-dependencies"
source = "https://github.com/cgoldberg/bump-dependencies"
download = "https://pypi.org/project/bump-dependencies"

[dependency-groups]
dev = [
    "tox",
]
lint = [
    "ruff",
]
test = [
    "pytest",
]
validate = [
    "packaging==16.8",
    "validate-pyproject==0.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest]
addopts = ["-vv"]
tmp_path_retention_policy = "none"

[tool.ruff]
line-length = 120
respect-gitignore = true
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "I", "PT", "RUF", "TID", "W"
]
extend-ignore = []
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

